hexWorld stuff moved to temporary module.

--- a/3DTest.vcxproj
+++ b/3DTest.vcxproj
@@ -158,6 +158,8 @@
     <ClCompile Include="src\mapEdit\mapEdit.cpp" />
     <ClCompile Include="src\mapEdit\mapPatch.cpp" />
     <ClCompile Include="src\missile.cpp" />
+    <ClCompile Include="src\modules\gameMode.cpp" />
+    <ClCompile Include="src\modules\workingMode.cpp" />
     <ClCompile Include="src\physics\hexPhysics.cpp" />
     <ClCompile Include="src\physics\phys.cpp" />
     <ClCompile Include="src\playerHexObj.cpp" />
@@ -218,6 +220,8 @@
     <ClInclude Include="src\mapEdit\mapEdit.h" />
     <ClInclude Include="src\mapEdit\mapPatch.h" />
     <ClInclude Include="src\missile.h" />
+    <ClInclude Include="src\modules\gameMode.h" />
+    <ClInclude Include="src\modules\workingMode.h" />
     <ClInclude Include="src\physEvent.h" />
     <ClInclude Include="src\physics\hexPhysics.h" />
     <ClInclude Include="src\physics\phys.h" />
