--- a/3DTest.vcxproj.filters
+++ b/3DTest.vcxproj.filters
@@ -37,6 +37,9 @@
     <Filter Include="Source Files\level">
       <UniqueIdentifier>{178c9233-6c9b-4424-a8cd-13957d48fc67}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\modules">
+      <UniqueIdentifier>{06b765b7-8407-4f8e-a092-899d2a4cea06}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\3DtestApp.cpp">
@@ -197,6 +200,12 @@
     </ClCompile>
     <ClCompile Include="src\level\hexQuad.cpp">
       <Filter>Source Files\level</Filter>
+    </ClCompile>
+    <ClCompile Include="src\modules\gameMode.cpp">
+      <Filter>Source Files\modules</Filter>
+    </ClCompile>
+    <ClCompile Include="src\modules\workingMode.cpp">
+      <Filter>Source Files\modules</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -379,6 +388,12 @@
     </ClInclude>
     <ClInclude Include="src\level\hexQuad.h">
       <Filter>Source Files\level</Filter>
+    </ClInclude>
+    <ClInclude Include="src\modules\gameMode.h">
+      <Filter>Source Files\modules</Filter>
+    </ClInclude>
+    <ClInclude Include="src\modules\workingMode.h">
+      <Filter>Source Files\modules</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
