CPlayerHexObj and CRobot now pure CEntities.

--- a/3DTest.vcxproj
+++ b/3DTest.vcxproj
@@ -120,11 +120,15 @@
     <ClCompile Include="src\3DtestApp.cpp" />
     <ClCompile Include="src\ai\dropAI.cpp" />
     <ClCompile Include="src\entity\aiCmp.cpp" />
+    <ClCompile Include="src\entity\botHealthC.cpp" />
     <ClCompile Include="src\entity\botTreadsModelCmp.cpp" />
     <ClCompile Include="src\entity\collider.cpp" />
     <ClCompile Include="src\entity\entity.cpp" />
+    <ClCompile Include="src\entity\healthC.cpp" />
     <ClCompile Include="src\entity\missileCollider.cpp" />
     <ClCompile Include="src\entity\modelCmp.cpp" />
+    <ClCompile Include="src\entity\playerCmp.cpp" />
+    <ClCompile Include="src\entity\playerHealthC.cpp" />
     <ClCompile Include="src\entity\playerModelCmp.cpp" />
     <ClCompile Include="src\entity\sceneryCollider.cpp" />
     <ClCompile Include="src\entity\transform.cpp" />
@@ -164,9 +168,7 @@
     <ClCompile Include="src\modules\workingMode.cpp" />
     <ClCompile Include="src\physics\hexPhysics.cpp" />
     <ClCompile Include="src\physics\phys.cpp" />
-    <ClCompile Include="src\playerHexObj.cpp" />
     <ClCompile Include="src\roboState.cpp" />
-    <ClCompile Include="src\robot.cpp" />
     <ClCompile Include="src\spawner.cpp" />
     <ClCompile Include="src\viewField.cpp" />
     <ClCompile Include="src\windows\examWin.cpp" />
@@ -180,11 +182,16 @@
     <ClInclude Include="src\3DtestApp.h" />
     <ClInclude Include="src\ai\dropAI.h" />
     <ClInclude Include="src\entity\aiCmp.h" />
+    <ClInclude Include="src\entity\botHealthC.h" />
     <ClInclude Include="src\entity\botTreadsModelCmp.h" />
     <ClInclude Include="src\entity\collider.h" />
     <ClInclude Include="src\entity\component.h" />
+    <ClInclude Include="src\entity\entity.h" />
+    <ClInclude Include="src\entity\healthC.h" />
     <ClInclude Include="src\entity\missileCollider.h" />
     <ClInclude Include="src\entity\modelCmp.h" />
+    <ClInclude Include="src\entity\playerCmp.h" />
+    <ClInclude Include="src\entity\playerHealthC.h" />
     <ClInclude Include="src\entity\playerModelCmp.h" />
     <ClInclude Include="src\entity\sceneryCollider.h" />
     <ClInclude Include="src\entity\transform.h" />
@@ -229,10 +236,8 @@
     <ClInclude Include="src\physEvent.h" />
     <ClInclude Include="src\physics\hexPhysics.h" />
     <ClInclude Include="src\physics\phys.h" />
-    <ClInclude Include="src\playerHexObj.h" />
     <ClInclude Include="src\powerUser.h" />
     <ClInclude Include="src\roboState.h" />
-    <ClInclude Include="src\robot.h" />
     <ClInclude Include="src\spawner.h" />
     <ClInclude Include="src\viewField.h" />
     <ClInclude Include="src\windows\examWin.h" />
