--- a/3DTest.vcxproj
+++ b/3DTest.vcxproj
@@ -166,7 +166,9 @@
     <ClCompile Include="src\missile.cpp" />
     <ClCompile Include="src\modules\baseModule.cpp" />
     <ClCompile Include="src\modules\gameMode.cpp" />
+    <ClCompile Include="src\modules\procGen.cpp" />
     <ClCompile Include="src\modules\procGenMode.cpp" />
+    <ClCompile Include="src\modules\procRoom.cpp" />
     <ClCompile Include="src\modules\workingMode.cpp" />
     <ClCompile Include="src\physics\hexPhysics.cpp" />
     <ClCompile Include="src\physics\phys.cpp" />
@@ -233,7 +235,9 @@
     <ClInclude Include="src\missile.h" />
     <ClInclude Include="src\modules\baseModule.h" />
     <ClInclude Include="src\modules\gameMode.h" />
+    <ClInclude Include="src\modules\procGen.h" />
     <ClInclude Include="src\modules\procGenMode.h" />
+    <ClInclude Include="src\modules\procRoom.h" />
     <ClInclude Include="src\modules\workingMode.h" />
     <ClInclude Include="src\physEvent.h" />
     <ClInclude Include="src\physics\hexPhysics.h" />
