--- a/3DTest.vcxproj
+++ b/3DTest.vcxproj
@@ -165,6 +165,8 @@
     <ClCompile Include="src\mapEdit\mapPatch.cpp" />
     <ClCompile Include="src\missile.cpp" />
     <ClCompile Include="src\modules\baseModule.cpp" />
+    <ClCompile Include="src\modules\delaunator.cpp" />
+    <ClCompile Include="src\modules\doorRect.cpp" />
     <ClCompile Include="src\modules\gameMode.cpp" />
     <ClCompile Include="src\modules\procGen.cpp" />
     <ClCompile Include="src\modules\procGenMode.cpp" />
@@ -234,6 +236,8 @@
     <ClInclude Include="src\mapEdit\mapPatch.h" />
     <ClInclude Include="src\missile.h" />
     <ClInclude Include="src\modules\baseModule.h" />
+    <ClInclude Include="src\modules\delaunator.hpp" />
+    <ClInclude Include="src\modules\doorRect.h" />
     <ClInclude Include="src\modules\gameMode.h" />
     <ClInclude Include="src\modules\procGen.h" />
     <ClInclude Include="src\modules\procGenMode.h" />
