--- a/3DTest.vcxproj.filters
+++ b/3DTest.vcxproj.filters
@@ -237,6 +237,9 @@
     <ClCompile Include="src\modules\doorRect.cpp">
       <Filter>Source Files\modules</Filter>
     </ClCompile>
+    <ClCompile Include="src\modules\doorBot.cpp">
+      <Filter>Source Files\modules</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\3DtestApp.h">
@@ -450,6 +453,9 @@
       <Filter>Source Files\modules</Filter>
     </ClInclude>
     <ClInclude Include="src\modules\doorRect.h">
+      <Filter>Source Files\modules</Filter>
+    </ClInclude>
+    <ClInclude Include="src\modules\doorBot.h">
       <Filter>Source Files\modules</Filter>
     </ClInclude>
   </ItemGroup>
